syntax = "proto3";
package shinkai_message_proto;

message Field {
    string name = 1;
    string field_type = 2;
}

message MessageSchemaType {
    string type_name = 1;
    repeated Field fields = 2;
}

message InternalMetadata {
    string sender_subidentity = 1;
    string recipient_subidentity = 2;
    MessageSchemaType message_schema_type = 3;
    string inbox = 4;
}

message ExternalMetadata {
    string sender = 1;
    string recipient = 2;
    string scheduled_time = 3;
    string signature = 4;
    string other = 5;
}

message Body {
    string content = 1;
    InternalMetadata internal_metadata = 2;
}

message ShinkaiMessage {
    Body body = 1;
    ExternalMetadata external_metadata = 2;
    string encryption = 3;
}